--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,10 @@ jobs:
       - checkout
       - run:
           name: Build project
-          command: npm run build
+          command: build
       - run: 
           name: Deploy to Firebase
-          command: npm run firebase -- deploy -- token 1//0gMn-LZNPph5kCgYIARAAGBASNwF-L9IrlZa4Xxk9VPJwp1xIBgo01Q2SQGsST5XV8stVeExbYY4csdQq6nkQDU5mvK24cXWNvDE -- only hosting
+          command: firebase -- deploy -- token 1//0gMn-LZNPph5kCgYIARAAGBASNwF-L9IrlZa4Xxk9VPJwp1xIBgo01Q2SQGsST5XV8stVeExbYY4csdQq6nkQDU5mvK24cXWNvDE -- only hosting
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
